# Nomad

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  new  rust-toolchain.toml  start-nomad.sh
.github/workflows/: docker-release.yml  pr-size-gate.yml  rust.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  types.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: cli.rs  config.rs  main.rs
crates/cli/src/commands/: faucet.rs  mod.rs  puzzle.rs  run.rs  withdraw.rs
crates/cli/src/commands/dev/: faucet.rs  mod.rs  proof.rs
crates/cli/src/commands/rpc/: mod.rs  signal.rs
crates/core/: Cargo.toml
crates/core/src/: pool.rs
crates/dcap-quote/: Cargo.toml  README.md
crates/dcap-quote/src/: lib.rs
crates/enclave/: Cargo.toml  build.sh
crates/enclave/src/: bootstrap.rs  global.rs  lib.rs  main.rs  sealing.rs
crates/enclave/src/ethereum/: buildernet.rs  contracts.rs  geth.rs  mod.rs  proof.rs  rpc.rs
crates/enclave/src/global/: client.rs  mod.rs  server.rs
crates/enclave/src/keyshare/: client.rs  mod.rs  server.rs
crates/ethereum/: Cargo.toml
crates/ethereum/src/: config.rs  contracts.rs  lib.rs  proof.rs  swap.rs
crates/node/: Cargo.toml
crates/node/src/: config.rs  enclave.rs  execute.rs  lib.rs
crates/node/src/enclave/: mod.rs  quote.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: behaviour.rs  lib.rs  shutdown.rs  tests.rs
crates/pool/: Cargo.toml
crates/pool/src/: lib.rs
crates/puzzle/: Cargo.toml  README.md
crates/puzzle/src/: chain_builder.rs  compiler.rs  lib.rs  transformations.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: api.rs  lib.rs  selectors.rs
crates/vm/: Cargo.toml  README.md
crates/vm/src/: instructions.rs  lib.rs  ops.rs  program.rs  tests.rs
scripts/: deploy_anvil.sh  run_nodes.sh
src/: main.rs
tests/: Cargo.toml  README.md
tests/common/: mod.rs
tests/integration/: cli_config.rs  ethereum_integration.rs  mod.rs  p2p_network.rs  rpc_server.rs  signal_processing.rs  vm_integration.rs
