[workspace]
members = [ "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MiragePrivacy/Nomad"

[workspace.dependencies]
eyre = "0.6"
futures = "0.3"
paste = "1.0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"

[workspace.dependencies.alloy]
version = "1.0.23"
default-features = false
features = [
  "serde",
  "rlp",
  "contract",
  "signer-local",
  "providers",
  "rpc-types",
  "reqwest"
]
