[workspace]
members = [ "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MiragePrivacy/Nomad"

[workspace.dependencies]
eyre = "0.6"
futures = "0.3"
opentelemetry = { version = "0.30", default-features = false, features = ["logs", "metrics", "trace"] }
otel-instrument = "0.1.3"
paste = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }
utoipa = { version = "5.4", features = ["url", "preserve_order"] }

[workspace.dependencies.alloy-primitives]
version = "1.3"
features = ["serde"]

[workspace.dependencies.alloy]
version = "1.0"
default-features = false
features = [
  "serde",
  "rlp",
  "contract",
  "signer-local",
  "providers",
  "rpc-types",
  "reqwest"
]
