[package]
name = "nomad-api"
version.workspace = true
edition.workspace = true

[dependencies]
nomad-types = { path = "../types" }

eyre.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true

axum = { version = "0.8.1", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
