[package]
name = "nomad-api"
version.workspace = true
edition.workspace = true

[dependencies]
nomad-types = { path = "../types" }
nomad-dcap-quote = { path = "../dcap-quote" }

eyre.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true

axum = { version = "0.8.1", features = ["macros"] }
sgx-isa = { version = "0.4.1", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
