[package]
name = "nomad-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true

[[bin]]
name = "nomad"
path = "src/main.rs"

[dependencies]
nomad-ethereum = { path = "../ethereum" }
nomad-p2p = { path = "../p2p" }
nomad-pool = { path = "../pool" }
nomad-rpc = { path = "../rpc" }
nomad-types = { path = "../types" }
nomad-vm = { path = "../vm" }

alloy.workspace = true
futures.workspace = true
paste.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

color-eyre = { version = "0.6", features = ["issue-url"] }
clap = { version = "4.5", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["clock", "std"] }
hostname = "0.4.1"
local-ip-address = "0.6.5"
reqwest = { version = "0.12", features = ["json"] }
resolve-path = "0.1"
toml = "0.9"
workspace-filter = "0.1.0"

# Logs, traces, and metrics
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.31", default-features = false }
opentelemetry = "0.30"
opentelemetry-appender-tracing = { version = "0.30" }
opentelemetry-otlp = "0.30"
opentelemetry_sdk = "0.30"
opentelemetry-semantic-conventions = "0.30"

[build-dependencies]
workspace-filter-build = "0.1.0"
