[package]
name = "nomad-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true

[[bin]]
name = "nomad"
path = "src/main.rs"

[dependencies]
nomad-ethereum = { path = "../ethereum" }
nomad-node = { path = "../node" }
nomad-api = { path = "../api" }
nomad-types = { path = "../types" }

alloy.workspace = true
opentelemetry.workspace = true
paste.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true

color-eyre = { version = "0.6", features = ["issue-url"] }
clap = { version = "4.5", features = ["derive", "env"] }
hostname = "0.4.1"
serde_json = "1.0"
workspace-filter = "0.1.0"

# Logs, traces, and metrics
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry-appender-tracing = { version = "0.30" }
opentelemetry-otlp = { version = "0.30" }
opentelemetry_sdk = "0.30"
opentelemetry-semantic-conventions = "0.30"

[build-dependencies]
workspace-filter-build = "0.1.0"
