[package]
name = "nomad-dcap-quote"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true

dcap-ql = "0.4.0"
sgx_pkix = "0.2.1"
base16 = "0.2.1"
der-parser = "10.0.0"
pem = "3.0.4"
x509-parser = "0.18.0"

[features]
nosgx = []
