[package]
name = "nomad-enclave"
version = "0.1.0"
edition = "2021"

[dependencies]
nomad-types = { path = "../types" }

eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

arrayref = "0.3.9"
hex = "0.4.3"
rdrand = "0.8.3"
sha2 = "0.10.9"
ureq = { version = "3.1.2", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false }
rustls-rustcrypto = "0.0.2-alpha"

# Alloy primitives
alloy-signer-local = "1.0"
alloy-sol-macro = "1.4"
alloy-sol-types = "1.4"
alloy-contract = "1.0"
alloy-consensus = "1.0"
alloy-network = "1.0"
alloy-signer = "1.0"
alloy-primitives = "1.0"
alloy-rlp = "0.3"
alloy-trie = "0.9"
alloy-rpc-types-eth = "1.0"

# Sgx and crypto
ra-verify = { git = "https://github.com/fleek-network/fleek-sgx", branch = "main" }
sgx-isa = "0.4.1"
libsecp256k1  = "=0.7.2"
aes-gcm = "=0.10.3"

[dependencies.ecies]
# Notes about cryptography dependencies:
#   - `aes-gcm`: pure rust, has been audited
#   - `libsecp256k1`: pure rust, from paritytech
#   - `rand_core::OsRng` -> `getrandom`: uses RDRAND on SGX
version = "=0.2.9"
default-features = false
features = ["pure", "std"]
