[package]
name = "nomad-ethereum"
version.workspace = true
edition.workspace = true

[dependencies]
nomad-types = { path = "../types" }
alloy.workspace = true
alloy-trie = "0.9.0"
alloy-consensus = "1.0.24"
thiserror = "2.0.14"

tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
