[package]
name = "nomad-ethereum"
version.workspace = true
edition.workspace = true

[dependencies]
nomad-types = { path = "../types" }

alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

alloy-trie = "0.9.0"
thiserror = "2.0.14"
url = { version = "2.5", features = ["serde"] }
