[package]
name = "nomad-node"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
nomad-ethereum = { path = "../ethereum" }
nomad-p2p = { path = "../p2p" }
nomad-pool = { path = "../pool" }
nomad-rpc = { path = "../rpc" }
nomad-types = { path = "../types" }
nomad-vm = { path = "../vm" }

alloy.workspace = true
eyre.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true

aes-gcm = "0.10.3"
chrono = { version = "0.4", features = ["clock", "std"] }
resolve-path = "0.1"
sha2 = "0.10.9"
toml = "0.9"
opentelemetry = "0.30"
