[package]
name = "nomad-node"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
nomad-ethereum = { path = "../ethereum" }
nomad-p2p = { path = "../p2p" }
nomad-pool = { path = "../pool" }
nomad-api = { path = "../api" }
nomad-types = { path = "../types" }
nomad-dcap-quote = { path = "../dcap-quote" }

alloy.workspace = true
eyre.workspace = true
opentelemetry.workspace = true
otel-instrument.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
utoipa.workspace = true

aes-gcm = "0.10.3"
arrayref = "0.3"
chrono = { version = "0.4", features = ["clock", "std"] }
resolve-path = "0.1"
sha3 = "0.10.8"
toml = "0.9"
zeroize = "1.8"

aesm-client = { version = "0.6.0", features = ["sgxs"] }
enclave-runner = { version = "0.7.2" }
sgxs-loaders = { version = "0.5.0" }
sgx-isa = "0.4.1"

# Import enclave code directly when not running on sgx
nomad-enclave = { path = "../enclave", optional = true }

[features]
nosgx = ["dep:nomad-enclave"]
