[package]
name = "nomad-p2p"
version.workspace = true
edition.workspace = true

[dependencies]
nomad-types = { path = "../types" }
nomad-core = { path = "../core" }

tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
futures.workspace = true

libp2p = { version = "0.56", features = [
    "noise",
    "gossipsub",
    "macros",
    "tcp",
    "tokio",
    "yamux",
] }
serde_json = "1.0.141"
