[package]
name = "nomad-p2p"
version.workspace = true
edition.workspace = true

[dependencies]
nomad-types = { path = "../types" }
nomad-pool = { path = "../pool" }

eyre.workspace = true
futures.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

libp2p = { version = "0.56", features = [
    "noise",
    "gossipsub",
    "macros",
    "tcp",
    "tokio",
    "yamux",
] }
serde_json = "1.0.141"
