[package]
name = "nomad-p2p"
version.workspace = true
edition.workspace = true

[dependencies]
nomad-types = { path = "../types" }
nomad-pool = { path = "../pool" }

eyre.workspace = true
futures.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

flexbuffers = "25.2"
humantime-serde = "1.1.1"

[dependencies.libp2p]
version = "0.56"
features = [
    "tokio",
    "macros",
    "tcp",
    "yamux",
    "noise",
    "identify",
    "gossipsub",
    "kad"
]

[dev-dependencies]
tracing-subscriber = "0.3"
